# vox-terminal

./: .gitignore  .pre-commit-config.yaml  Interviews.md  README.md  VoxCursor_PRD.md  install.sh  pyproject.toml
.cursor/: mcp.json
.github/workflows/: ci.yml
Formula/: vox-terminal.rb
docs/: PLAN-three-priorities.md
rules/: architecture.mdc  async-patterns.mdc  config.mdc  mcp-tools.mdc  project-conventions.mdc  python-standards.mdc  source-control.mdc  system-design.mdc  tdd.mdc  testing.mdc  tts-user-facing.mdc
src/vox_terminal/: __init__.py  audio_capture.py  cli.py  config.py  mcp_server.py  observability.py  project_root.py  retry.py
src/vox_terminal/context/: __init__.py  assembler.py  budget.py
src/vox_terminal/context/sources/: __init__.py  base.py  configs.py  files.py  git.py  inline.py  registry.py  tree.py
src/vox_terminal/llm/: __init__.py  base.py  claude.py
src/vox_terminal/memory/: __init__.py  store.py
src/vox_terminal/stt/: __init__.py  base.py  openai_stt.py  whisper_local.py
src/vox_terminal/tts/: __init__.py  base.py  elevenlabs_tts.py  macos_say.py  openai_tts.py  piper.py
src/vox_terminal/tui/: __init__.py  display.py  state.py  widgets.py
src/vox_terminal/vad/: __init__.py  base.py  energy.py  silero.py
tests/: conftest.py
tests/contracts/: test_mcp_server.py
tests/integration/: test_pipeline.py
tests/unit/: test_audio_capture.py  test_cli.py  test_config.py  test_context.py  test_context_budget.py  test_context_sources.py  test_inline.py  test_llm.py  test_memory.py  test_observability.py  test_project_root.py  test_retry.py  test_stt.py  test_tts.py  test_tui_display.py  test_tui_widgets.py  test_vad.py
